[gd_scene load_steps=3 format=3 uid="uid://cquvvwb41prcm"]

[ext_resource type="Script" path="res://source/main-menu/play_player.gd" id="1_18n4o"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nh3kq"]
properties/0/path = NodePath("Container/Index:text")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Container/Name:text")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Container/Spawn:selected")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Player" type="PanelContainer"]
script = ExtResource("1_18n4o")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nh3kq")

[node name="Container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Index" type="Label" parent="Container"]
layout_mode = 2
text = "1."

[node name="Name" type="Label" parent="Container"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="Container"]
visible = false
layout_mode = 2

[node name="Edit" type="Button" parent="Container"]
visible = false
layout_mode = 2
text = "..."

[node name="Spawn" type="OptionButton" parent="Container"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 4
popup/item_0/text = "1"
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2
popup/item_3/text = "4"
popup/item_3/id = 3

[connection signal="text_submitted" from="Container/NameEdit" to="." method="_on_name_edit_text_submitted"]
[connection signal="pressed" from="Container/Edit" to="." method="_on_edit_pressed"]
